Worked on layout issues.

--- a/styles/base.css
+++ b/styles/base.css
@@ -7,12 +7,12 @@
     }
     
     header {
-        /* width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
+        width: 100%;
+        /* display: flex; */
+        /* align-items: center; */
+        /* justify-content: space-evenly; */
         font-family: 'Poetsen';
-        font-size: 0.75rem; */
+        font-size: 0.75rem;
         text-align: center;
         background-color: #6B4E71;
         color: #F6F8FF;
@@ -57,12 +57,12 @@
     
     nav {
         display: flex;
-        /* flex-direction: column; */
-        flex-direction: row;
+        flex-direction: column;
+        /* flex-direction: row; */
         width: 100%;        
         background-color: #53687E;
         justify-content: space-around;
-        padding: 1rem 0;
+        /* padding: 1rem 0; */
     }
     
     nav a {
@@ -86,11 +86,11 @@
     
     /* Main Styles */
     main {
-        max-width: 90%;
+        /* max-width: 90%; */
         /* max-width: 100%; */
-        margin: 0 auto;
-        /* padding: 1rem; */
-        padding: 20px;
+        /* margin: 0 auto; */
+        /* padding: 20px; */
+        padding-top: 20px;
         align-items: center;
         display: grid;
         grid-template-columns: 1fr;
@@ -99,10 +99,11 @@
     }
     
     .card {
-        width: 85%;
+        display: grid;
+        width: 90%;
         /* width: 100%; */
         background-color: #F6F8FF;
-        padding: 1rem;
+        padding: 20px;
         margin: 1rem 0;
         box-shadow: 0 0 10px #53687E;
         border: 4px solid #53687E;
@@ -113,11 +114,11 @@
         border-radius: 15px;
     }
     
-    /* .course-card {
+    .course-card {
         border: 2px solid #4F345A;
         padding: 10px;
         margin-bottom: 10px;
-    } */
+    }
 
     /* Add the below on 08-10-24 to centering the card horizontally and try and fix performance. */
     #school {
@@ -162,7 +163,7 @@
         border-radius: 8px;
         padding: 10px 50px;
         /* added the below on 08-10-24 */
-        font-size: 20px;
+        font-size: 16px;
         /* cursor: pointer; */
     }
     
@@ -181,7 +182,7 @@
     .course {
         margin: 0.5rem 0;
         padding: 20px 70px;
-        width: 70%;
+        width: 90%;
         border-radius: 8px;
         background-color: #6B4E71;
         text-align: center;
